--- a/app/blocks/header.html
+++ b/app/blocks/header.html
@@ -7,8 +7,8 @@
                     <a href="#"><img src="images/data/logo.png" alt=""></a>
                 </div>
                 <div class="header__zakaz-box">
-                    <a class="zakaz-box__zayavka" href="javascript:;" data-fancybox data-src="#modal">Заявка на авто</a>
-                    <a class="zakaz-box__zvonok" href="javascript:;" data-fancybox data-src="#modal">Заказать звонок</a>
+                    <a class="zakaz-box__zayavka" href="javascript:;" data-fancybox data-src="#popup-zayavka">Заявка на авто</a>
+                    <a class="zakaz-box__zvonok" href="javascript:;" data-fancybox data-src="#popup-zvonok">Заказать звонок</a>
                 </div>
                 <div class="header__phones">
                     <div class="header__phones-box">
@@ -23,7 +23,7 @@
                     <a href="#" target="blank"></a>
                 </div>
                 <div class="header__dealer">
-                    <a href="javascript:;" data-fancybox data-src="#modal">Стать дилером</a>
+                    <a href="#">Стать дилером</a>
                 </div>
                 <div class="header__nav">
                     <div class="language-select">
