--- a/app/blocks/footer.html
+++ b/app/blocks/footer.html
@@ -22,7 +22,7 @@
         <div class="footer__right">
             <div class="footer__sitemap">
                 <a href="#">Карта сайта</a>
-                <a href="javascript:;" data-fancybox data-src="#modal">Стать диллером</a>
+                <a href="#">Стать диллером</a>
             </div>
             <div class="footer__search">
                 <form>
