--- a/app/blocks/head.html
+++ b/app/blocks/head.html
@@ -21,4 +21,5 @@
     <link rel="stylesheet" href="css/fancybox.min.css">
     <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/libs.css">
+    <link rel="stylesheet" href="css/formstyler.min.css">
 </head>
