--- a/app/blocks/header.html
+++ b/app/blocks/header.html
@@ -7,8 +7,10 @@
                     <a href="#"><img src="images/data/logo.png" alt=""></a>
                 </div>
                 <div class="header__zakaz-box">
-                    <a class="zakaz-box__zayavka" href="javascript:;" data-fancybox data-src="#popup-zayavka">Заявка на авто</a>
-                    <a class="zakaz-box__zvonok" href="javascript:;" data-fancybox data-src="#popup-zvonok">Заказать звонок</a>
+                    <a class="zakaz-box__zayavka" href="javascript:;" data-fancybox data-src="#popup-zayavka">Заявка на
+                        авто</a>
+                    <a class="zakaz-box__zvonok" href="javascript:;" data-fancybox data-src="#popup-zvonok">Заказать
+                        звонок</a>
                 </div>
                 <div class="header__phones">
                     <div class="header__phones-box">
@@ -39,6 +41,16 @@
                     </div>
                     <div class="header__login">
                         <a href="javascript:;" data-fancybox data-src="#login">Вход</a>
+                        <div class="user__box">
+                            <div class="user__photo">
+                                <img src="images/data/user.jpg" alt="">
+                            </div>
+                            <ul class="user__menu">
+                                <li><a href="#">Игорь Киклевич</a></li>
+                                <li><a href="#">Мой гараж</a></li>
+                                <li><a href="#">Выход</a></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
                 <div class="header__mobile">
@@ -46,11 +58,12 @@
                 </div>
             </div>
         </div>
-        <!--main menu-->
+        <!--top navigation end-->
         <div class="header__bottom">
             <div class="container">
+                <!--main menu-->
                 <ul class="main-menu list-unstyled">
-                    <li class="main-menu-item with-submenu">
+                    <li class="main-menu-item">
                         <a href="#">Новые авто</a>
                     </li>
                     <li class="main-menu-item with-submenu">
@@ -88,6 +101,7 @@
                         <a href="#">Контакты</a>
                     </li>
                 </ul>
+                <!--main menu end-->
                 <div class="header__search">
                     <button class="search-toggle">
                         <span class="icon search-icon"></span></button>
@@ -135,16 +149,28 @@
                             </li>
                             <li><a href="/en/purchasing-process">
                                     English
-                                </a></li>
+                                </a>
+                            </li>
                         </ul>
                     </div>
                     <div class="header__login">
                         <a href="javascript:;" data-fancybox data-src="#login">Вход</a>
+                        <div class="user__box">
+                            <div class="user__photo">
+                                <img src="images/data/user.jpg" alt="">
+                            </div>
+                            <ul class="user__menu">
+                                <li><a href="#">Игорь Киклевич</a></li>
+                                <li><a href="#">Мой гараж</a></li>
+                                <li><a href="#">Выход</a></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
+               <!--header mobile menu-->
                 <div class="header__mobile-menu">
                     <ul class="main-menu list-unstyled">
-                        <li class="main-menu-item with-submenu">
+                        <li class="main-menu-item">
                             <a href="#">Новые авто</a>
                         </li>
                         <li class="main-menu-item with-submenu">
@@ -183,7 +209,9 @@
                         </li>
                     </ul>
                 </div>
+                <!--header mobile menu end-->
             </div>
         </div>
+        <!--mobile box end-->
     </div>
 </header>
