--- a/app/blocks/scripts.html
+++ b/app/blocks/scripts.html
@@ -1,13 +1,10 @@
 <script src="js/jquery.min.js"></script>
 <script src="js/slick.min.js"></script>
-<!-- <script src="js/imagesloaded.pkgd.min.js"></script>
-    <script src="js/isotope.pkgd.min.js"></script> -->
 <script src="js/fotorama.js"></script>
-<!-- <script src="js/jquery.mCustomScrollbar.min.js"></script>
-    <script src="js/jquery-ui.min.js"></script>
-    <script src="js/blockUI.js"></script>
-    <script src="js/notify.min.js"></script>
-    <script src="js/underscore.js"></script> -->
+<script src="js/jquery.formstyler.min.js"></script>
 <script src="js/fancybox.min.js"></script>
+<script src="js/jquery.formstyler.min.js"></script>
 <script src="js/libs.min.js"></script>
 <script src="js/main.js"></script>
+<!-- <script src="js/manheim/index.js"></script> -->
+<!-- <script src="js/lib/prototype.js"></script> -->
